--- a/package.json
+++ b/package.json
@@ -1,3 +1,11 @@
-{ "scripts" :
-  { "test" : "test" }
+{
+	"name"    : "flickr-api",
+	"version" : "2.0.0",
+	"scripts" : { 
+		"test" : "test" 
+		},
+	"dependencies" : {
+		"mocha"  : ">=1.7.1",
+		"should" : ">=1.2.1"
+	}
 }
