--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name"    : "flickr-api",
 	"version" : "2.0.0",
 	"scripts" : { 
-		"test" : "test" 
+		"test" : "mocha test" 
 		},
 	"dependencies" : {
 		"mocha"  : ">=1.7.1",
